Build docker then run container for FE

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: latest
+          cache: 'npm'
+          cache-dependency-path: starter/frontend/package-lock.json
 
       # Install the dependencies.
       - run: cd frontend && npm ci
@@ -34,6 +36,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: latest
+          cache: 'npm'
+          cache-dependency-path: starter/frontend/package-lock.json
 
       # Install the dependencies.
       - run: cd frontend && npm ci
@@ -52,9 +56,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: latest
+          cache: 'npm'
+          cache-dependency-path: starter/frontend/package-lock.json
 
-      # Install the dependencies.
-      - run: cd frontend && npm ci
-
-      # Run the test.
-      - run: cd frontend && npm run test
+      - name: Build and run Docker
+      run: |
+        cd frontend
+        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
+        docker run --name mp-frontend -p 3000:3000 -d mp-frontend
