--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: latest
           cache: 'npm'
-          cache-dependency-path: starter/frontend/package-lock.json
+          cache-dependency-path: frontend/package-lock.json
 
       # Install the dependencies.
       - run: cd frontend && npm ci
@@ -37,7 +37,7 @@ jobs:
         with:
           node-version: latest
           cache: 'npm'
-          cache-dependency-path: starter/frontend/package-lock.json
+          cache-dependency-path: frontend/package-lock.json
 
       # Install the dependencies.
       - run: cd frontend && npm ci
@@ -57,7 +57,7 @@ jobs:
         with:
           node-version: latest
           cache: 'npm'
-          cache-dependency-path: starter/frontend/package-lock.json
+          cache-dependency-path: frontend/package-lock.json
 
       # Build and run Docker
       - run: cd frontend && docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
