--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -13,32 +13,36 @@ jobs:
       # Check out the code from the repository.
       - uses: actions/checkout@v3
 
-      # Set up a Node.js environment using the specified node version.
-      - uses: actions/setup-node@v3
+      # Set up a python environment using the specified version.
+      - uses: actions/setup-python@v5
         with:
-          node-version: latest
+          node-version: '3.10'
 
       # Install the dependencies.
-      - run: cd backend && npm ci
+      - run: cd backend && python -m pip install --upgrade pip
+      - run: cd backend && pip install pipenv
+      - run: cd backend && pip install flake8
 
       # Run the linter.
-      - run: cd backend && npm run lint
+      - run: cd backend && pipenv run lint
   test:
     runs-on: ubuntu-latest
     steps:
       # Check out the code from the repository.
       - uses: actions/checkout@v3
 
-      # Set up a Node.js environment using the specified node version.
-      - uses: actions/setup-node@v3
+      # Set up a python environment using the specified version.
+      - uses: actions/setup-python@v5
         with:
-          node-version: latest
+          node-version: '3.10'
 
       # Install the dependencies.
-      - run: cd backend && npm ci
+      - run: cd backend && python -m pip install --upgrade pip
+      - run: cd backend && pip install pipenv
+      - run: cd backend && pip install flake8
 
       # Run the test.
-      - run: cd backend && npm run test
+      - run: cd backend && pipenv install pytest && pipenv run test
 
   build:
     needs: [lint]
@@ -56,4 +60,4 @@ jobs:
       - run: cd backend && npm ci
 
       # Build docker
-      - run: cd backend && npm run test
+      - run: cd backend && docker build --tag mp-backend:latest .
