--- a/.github/frontend-cd.yaml
+++ b/.github/frontend-cd.yaml
@@ -1,8 +1,8 @@
 name: Frontend Continuous Deployment
 on:
   workflow_dispatch:
-  # Automatic trigger on merge request events targeting the main branch
-  merge_request:
+  # Automatic trigger on pull request events targeting the main branch
+  pull_request:
     branches:
       - main
 
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: latest
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       # Install the dependencies.
       - run: cd frontend && npm ci
@@ -33,12 +35,15 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: latest
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       # Install the dependencies.
       - run: cd frontend && npm ci
 
       # Run the test.
       - run: cd frontend && npm run test
+
   build:
     needs: [lint, test]
     runs-on: ubuntu-latest
@@ -50,9 +55,33 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: latest
-s
-      # Build docker. REACT_APP_MOVIE_API_URL
-      - run: cd frontend && npm ci
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
-      # Run the test.
-      - run: cd frontend && npm run test
+      # Configure AWS credential
+      - uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
+
+      - name: Login to AWS ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build, tag and push docker image to AWS ECR
+        working-directory: frontend
+        run: |
+          docker build --build-arg=REACT_APP_MOVIE_API_URL=$BACKEND_URL --tag $REGISTRY/$REPO_NAME:$IMAGE_TAG .
+          docker push $REGISTRY/$REPO_NAME:$IMAGE_TAG
+
+      - name: Configure kubeconfig
+        run:
+        aws eks update-kubeconfig --name cluster --region us-east-1
+      
+      - name: Deploy docker image by kustomize
+        working-directory: frontend/k8s
+        run: |
+            kustomize edit set image frontend=$REGISTRY/$REPO_NAME:$IMAGE_TAG
+            kustomize build | kubectl apply -f -
