--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Terraform Apply
         # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
+        run: cd setup/terraform && terraform apply -auto-approve
 
       # - name: Terraform Destroy
       #   run: terraform plan -destroy
