--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -1,10 +1,12 @@
 name: Frontend Continuous Deployment
 on:
   workflow_dispatch:
-  # Automatic trigger on pull request events targeting the main branch
-  pull_request:
+  # Automatic trigger on push or merge to the main branch
+  push:
     branches:
       - main
+    paths:
+      - 'frontend/**'
 
 jobs:
   lint:
@@ -63,7 +65,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          # aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
           aws-region: us-east-1
 
       - name: Login to AWS ECR
