--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -60,12 +60,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      # Configure AWS credential
-      - uses: aws-actions/configure-aws-credentials@v3
+      - name: Configure AWS credential
+        uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
           aws-region: us-east-1
 
       - name: Login to AWS ECR
@@ -81,7 +80,7 @@ jobs:
       - name: Configure kubeconfig
         run: |
         aws eks update-kubeconfig --name cluster --region us-east-1
-      
+
       - name: Deploy docker image by kustomize
         working-directory: frontend/k8s
         run: |
