--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -74,8 +74,8 @@ jobs:
       - name: Build, tag and push docker image to AWS ECR
         working-directory: frontend
         run: |
-          docker build --build-arg=REACT_APP_MOVIE_API_URL=$BACKEND_URL --tag $REGISTRY/$REPO_NAME:$IMAGE_TAG .
-          docker push $REGISTRY/$REPO_NAME:$IMAGE_TAG
+          docker build --build-arg=REACT_APP_MOVIE_API_URL=${{ vars.REACT_APP_MOVIE_API_URL }} --tag ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA::7} .
+          docker push ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA::7}
 
       - name: Configure kubeconfig
         run: |
@@ -84,5 +84,5 @@ jobs:
       - name: Deploy docker image by kustomize
         working-directory: frontend/k8s
         run: |
-          kustomize edit set image frontend=$REGISTRY/$REPO_NAME:$IMAGE_TAG
+          kustomize edit set image frontend=${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA::7}
           kustomize build | kubectl apply -f -
