--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -1,4 +1,4 @@
-name: Frontend Continuous Deployment
+name: Backend Continuous Deployment
 on:
   workflow_dispatch:
   # Automatic trigger on push or merge to the main branch
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'frontend/**'
+      - 'backend/**'
 
 jobs:
   lint:
@@ -15,36 +15,36 @@ jobs:
       # Check out the code from the repository.
       - uses: actions/checkout@v3
 
-      # Set up a Node.js environment using the specified node version.
-      - uses: actions/setup-node@v3
+      # Set up a python environment using the specified version.
+      - uses: actions/setup-python@v5
         with:
-          node-version: latest
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          node-version: '3.10'
 
       # Install the dependencies.
-      - run: cd frontend && npm ci
+      - run: cd backend && python -m pip install --upgrade pip
+      - run: cd backend && pip install pipenv
+      - run: cd backend && pip install flake8
 
       # Run the linter.
-      - run: cd frontend && npm run lint
+      - run: cd backend && pipenv run lint
   test:
     runs-on: ubuntu-latest
     steps:
       # Check out the code from the repository.
       - uses: actions/checkout@v3
 
-      # Set up a Node.js environment using the specified node version.
-      - uses: actions/setup-node@v3
+      # Set up a python environment using the specified version.
+      - uses: actions/setup-python@v5
         with:
-          node-version: latest
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          node-version: '3.10'
 
       # Install the dependencies.
-      - run: cd frontend && npm ci
+      - run: cd backend && python -m pip install --upgrade pip
+      - run: cd backend && pip install pipenv
+      - run: cd backend && pip install flake8
 
       # Run the test.
-      - run: cd frontend && npm run test
+      - run: cd backend && pipenv install pytest && pipenv run test
 
   build:
     needs: [lint, test]
@@ -53,13 +53,6 @@ jobs:
     steps:
       # Check out the code from the repository.
       - uses: actions/checkout@v3
-
-      # Set up a Node.js environment using the specified node version.
-      - uses: actions/setup-node@v3
-        with:
-          node-version: latest
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Configure AWS credential
         uses: aws-actions/configure-aws-credentials@v3
@@ -73,17 +66,17 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag and push docker image to AWS ECR
-        working-directory: frontend
+        working-directory: backend
         run: |
-          docker build --build-arg=REACT_APP_MOVIE_API_URL=${{ vars.REACT_APP_MOVIE_API_URL }} --tag ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA::7} .
-          docker push ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA::7}
+          docker build --tag ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/backend:${GITHUB_SHA::7} .
+          docker push ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/backend:${GITHUB_SHA::7}
 
       - name: Kubeconfig login
         run: |
           aws eks update-kubeconfig --name cluster --region us-east-1
 
       - name: Deploy docker image by kustomize
-        working-directory: frontend/k8s
+        working-directory: backend/k8s
         run: |
-          kustomize edit set image frontend=${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/frontend:${GITHUB_SHA::7}
+          kustomize edit set image backend=${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/backend:${GITHUB_SHA::7}
           kustomize build | kubectl apply -f -
